add alias for richgo, fixed .gitconfig

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -7,3 +7,5 @@ helper =
 helper = /usr/local/share/gcm-core/git-credential-manager
 [credential "https://dev.azure.com"]
 useHttpPath = true
+[pull]
+	rebase = true
