--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -193,7 +193,11 @@
 #: the gaps. Changing this option dynamically via reloading the config
 #: or remote control is undefined.
 
-# text_composition_strategy platform
+# Dynamic text rendering based on theme
+# Dark themes: 0.4 (thin strokes like iTerm2)
+# Light themes: 1.7 (normal strokes for better contrast)
+# This value will be dynamically adjusted when switching themes
+text_composition_strategy 1.7 0
 
 #: Control how kitty composites text glyphs onto the background color.
 #: The default value of platform tries for text rendering as close to
@@ -287,7 +291,8 @@
 #: so if you want to override it, place your value after the lines
 #: where the theme file is included.
 
-# cursor_shape block
+# Better cursor visibility for reading
+cursor_shape block
 
 #: The cursor shape can be one of block, beam, underline. Note that
 #: when reloading the config this will be changed only if the cursor
@@ -312,7 +317,8 @@
 
 #: The thickness of the underline cursor (in pts).
 
-# cursor_blink_interval -1
+# Gentle cursor blink for less eye strain
+cursor_blink_interval 0.5
 
 #: The interval to blink the cursor (in seconds). Set to zero to
 #: disable blinking. Negative values mean use system default. Note
@@ -328,11 +334,13 @@
 #: uses extra power as it means the screen is redrawn multiple times
 #: per blink interval. See also, cursor_stop_blinking_after.
 
-# cursor_stop_blinking_after 15.0
+# Stop blinking after 10 seconds to reduce distraction
+cursor_stop_blinking_after 10.0
 
 #: Stop blinking cursor after the specified number of seconds of
 #: keyboard inactivity. Set to zero to never stop blinking.
 
+# Smooth cursor trail for easier tracking
 cursor_trail 1
 
 #: Set this to a value larger than zero to enable a "cursor trail"
@@ -1390,7 +1398,7 @@ background_opacity 1
 #: decrease_background_opacity) or the remote control facility.
 #: Changing this option by reloading the config is not supported.
 
-background_image ~/dotfiles/kitty/terminal_sky.png
+#background_image ~/dotfiles/kitty/terminal_sky.png
 
 #: Path to a background image. Must be in PNG/JPEG/WEBP/TIFF/GIF/BMP
 #: format. Note that when using auto_color_scheme
@@ -1398,7 +1406,7 @@ background_image ~/dotfiles/kitty/terminal_sky.png
 #: this option is overridden by the color scheme file and must be set
 #: inside it to take effect.
 
-background_image_layout scaled
+#background_image_layout scaled
 
 #: Whether to tile, scale or clamp the background image. The value can
 #: be one of tiled, mirror-tiled, scaled, clamped, centered or
@@ -1946,7 +1954,8 @@ background_tint_gaps -10
 #: background_opacity. If you want to use both, you are probably
 #: better off just hiding the titlebar with hide_window_decorations.
 
-# macos_option_as_alt no
+# Enable right Option as Alt for Neovim (left Option for macOS navigation)
+macos_option_as_alt right
 
 #: Use the Option key as an Alt key on macOS. With this set to no,
 #: kitty will use the macOS native Option+Key to enter Unicode
@@ -2794,6 +2803,18 @@ bold_font        family='JetBrainsMonoNL Nerd Font Mono' style=Bold
 italic_font      auto
 bold_italic_font auto
 font_size 14.0
+
+# Line height optimization for better reading
+# 1.2 gives comfortable spacing without being too sparse
+adjust_line_height 120%
+
+# Character spacing for better readability
+# Slightly increased for less eye strain
+adjust_column_width 102%
+
+# Disable ligatures for better code readability
+# (can be re-enabled if you prefer them)
+disable_ligatures always
 disable_ligatures always
 #font_features JetBrainsMonoNLNF-Regular +zero +ss19
 #adjust_line_height 100%
@@ -2802,6 +2823,24 @@ disable_ligatures always
 
 
 # BEGIN_KITTY_THEME
-# Default
+# 3024 Day
 include current-theme.conf
 # END_KITTY_THEME
+
+
+# ============================================================================
+# KEYBOARD SHORTCUTS
+# ============================================================================
+# Include comprehensive macOS keyboard shortcuts
+include macos-shortcuts.conf
+
+
+# ============================================================================
+# WINDOW LAYOUTS
+# ============================================================================
+# Enable layouts that support proper splitting
+enabled_layouts splits,stack,tall,fat,horizontal,vertical,grid
+
+# Default layout
+# Using 'splits' allows cmd+d and cmd+shift+d to work correctly
+layout splits
