more kitty conf changes and qol improvements

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -381,7 +381,7 @@ cursor_trail_decay 0.1 0.2
 
 #: Scrollback {{{
 
-scrollback_lines 10000
+scrollback_lines 50000
 
 #: Number of lines of history to keep in memory for scrolling back.
 #: Memory is allocated on demand. Negative numbers are (effectively)
@@ -400,7 +400,7 @@ scrollback_lines 10000
 #: one which means fully opaque, aka visible. Set to a value between
 #: zero and one to make the indicator less visible.
 
-# scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
+scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
 
 #: Program with which to view scrollback in a new window. The
 #: scrollback buffer is passed as STDIN to this program. If you change
@@ -412,7 +412,7 @@ scrollback_lines 10000
 #: set to 0 if there is no cursor, for example, when showing the last
 #: command output.
 
-# scrollback_pager_history_size 0
+scrollback_pager_history_size 10
 
 #: Separate scrollback history size (in MB), used only for browsing
 #: the scrollback buffer with pager. This separate buffer is not
@@ -458,7 +458,7 @@ scrollback_lines 10000
 
 #: Mouse {{{
 
-# mouse_hide_wait 3.0
+mouse_hide_wait 3.0
 
 #: Hide mouse cursor after the specified number of seconds of the
 #: mouse not being used. Set to zero to disable mouse cursor hiding.
@@ -505,12 +505,12 @@ scrollback_lines 10000
 #:  - 0.1 3.0 40 yes
 
 # url_color #0087bd
-# url_style curly
+url_style curly
 
 #: The color and style for highlighting URLs on mouse-over. url_style
 #: can be one of: none, straight, double, curly, dotted, dashed.
 
-# open_url_with default
+open_url_with default
 
 #: The program to open clicked URLs. The special value default will
 #: first look for any URL handlers defined via the open_actions
@@ -523,7 +523,7 @@ scrollback_lines 10000
 #: The set of URL prefixes to look for when detecting a URL under the
 #: mouse cursor.
 
-# detect_urls yes
+detect_urls yes
 
 #: Detect URLs under the mouse. Detected URLs are highlighted with an
 #: underline and the mouse cursor becomes a hand over them. Even if
@@ -617,11 +617,15 @@ copy_on_select yes
 
 strip_trailing_spaces smart
 
+# Clipboard integration enhancements
+clipboard_control write-clipboard write-primary read-clipboard read-primary
+clipboard_max_size 64
+
 #: Remove spaces at the end of lines when copying to clipboard. A
 #: value of smart will do it when using normal selections, but not
 #: rectangle selections. A value of always will always do it.
 
-# select_by_word_characters @-./_~?&=%+#
+select_by_word_characters @-./_~?&=%+#
 
 #: Characters considered part of a word when double clicking. In
 #: addition to these characters any character that is marked as an
@@ -745,7 +749,7 @@ strip_trailing_spaces smart
 
 #: Paste from the primary selection
 
-# mouse_map middle release ungrabbed paste_from_selection
+mouse_map middle release ungrabbed paste_from_selection
 
 #: Start selecting text
 
@@ -826,7 +830,7 @@ strip_trailing_spaces smart
 
 #: Performance tuning {{{
 
-repaint_delay 5
+repaint_delay 2
 
 #: Delay between screen updates (in milliseconds). Decreasing it,
 #: increases frames-per-second (FPS) at the cost of more CPU usage.
@@ -877,18 +881,18 @@ visual_bell_duration 0.1
 #: easing functions <https://developer.mozilla.org/en-
 #: US/docs/Web/CSS/easing-function>.
 
-# visual_bell_color none
+visual_bell_color #cc6666
 
 #: The color used by visual bell. Set to none will fall back to
 #: selection background color. If you feel that the visual bell is too
 #: bright, you can set it to a darker color.
 
-# window_alert_on_bell yes
+window_alert_on_bell yes
 
 #: Request window attention on bell. Makes the dock icon bounce on
 #: macOS or the taskbar flash on Linux.
 
-# bell_on_tab "🔔 "
+bell_on_tab "🔔 "
 
 #: Some text or a Unicode symbol to show on the tab if a window in the
 #: tab that does not have focus has a bell. If you want to use leading
@@ -1198,7 +1202,7 @@ tab_bar_edge top
 #: The horizontal alignment of the tab bar, can be one of: left,
 #: center, right.
 
-# tab_bar_min_tabs 2
+tab_bar_min_tabs 1
 
 #: The minimum number of tabs that must exist before the tab bar is
 #: shown.
@@ -1243,7 +1247,7 @@ tab_bar_edge top
 #: The maximum number of cells that can be used to render the text in
 #: a tab. A value of zero means that no limit is applied.
 
-# tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{tab.last_focused_progress_percent}{title}"
+tab_title_template "{index}: {title}"
 
 #: A template to render the tab title. The default just renders the
 #: title with optional symbols for bell and activity. If you wish to
@@ -1301,10 +1305,10 @@ tab_bar_edge top
 
 # active_tab_foreground   #000
 # active_tab_background   #eee
-# active_tab_font_style   bold-italic
+active_tab_font_style   bold
 # inactive_tab_foreground #444
 # inactive_tab_background #999
-# inactive_tab_font_style normal
+inactive_tab_font_style normal
 
 #: Tab bar colors and styles.
 
@@ -1329,7 +1333,7 @@ tab_bar_edge top
 
 #: The foreground and background colors.
 
-background_opacity 1
+background_opacity 0.98
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1779,7 +1783,13 @@ background_tint_gaps -10
 #: special value of ask means that kitty will ask before opening the
 #: link when clicked.
 
-# shell_integration enabled
+shell_integration enabled
+
+# Forward stdin to child processes for better SSH support
+forward_stdin_to_child yes
+
+# Better Unicode support
+unicode_normalization yes
 
 #: Enable shell integration on supported shells. This enables features
 #: such as jumping to previous prompts, browsing the output of the
@@ -1882,7 +1892,7 @@ background_tint_gaps -10
 #:     # Do not clear previous notification when next command finishes or window regains focus
 #:     notify_on_cmd_finish invisible 5.0 notify
 
-# term xterm-kitty
+term xterm-256color
 
 #: The value of the TERM environment variable to set. Changing this
 #: can break many terminal programs, only change it if you know what
@@ -1996,7 +2006,7 @@ macos_thicken_font 0.25
 #: this option is obsolete (although still supported). Consider using
 #: text_composition_strategy instead.
 
-# macos_traditional_fullscreen no
+macos_traditional_fullscreen no
 
 #: Use the macOS traditional full-screen transition, that is faster,
 #: but less pretty.
@@ -2458,7 +2468,13 @@ macos_thicken_font 0.25
 
 #: Next layout
 
-# map kitty_mod+l next_layout
+map kitty_mod+l next_layout
+
+# Direct shortcuts to specific layouts
+map ctrl+alt+f goto_layout fat
+map ctrl+alt+t goto_layout tall
+map ctrl+alt+s goto_layout stack
+map ctrl+alt+g goto_layout grid
 
 
 #: You can also create shortcuts to switch to specific layouts::
@@ -2798,8 +2814,8 @@ macos_thicken_font 0.25
 
 
 # BEGIN_KITTY_FONTS
-font_family      family="JetBrainsMonoNL Nerd Font Mono"
-bold_font        family='JetBrainsMonoNL Nerd Font Mono' style=Bold
+font_family      family="JetBrainsMono Nerd Font Mono"
+bold_font        family='JetBrainsMono Nerd Font Mono' style=Bold
 italic_font      auto
 bold_italic_font auto
 font_size 14.0
@@ -2812,10 +2828,9 @@ adjust_line_height 120%
 # Slightly increased for less eye strain
 adjust_column_width 102%
 
-# Disable ligatures for better code readability
-# (can be re-enabled if you prefer them)
-disable_ligatures always
-disable_ligatures always
+# Enable ligatures for beautiful code rendering
+# (can be disabled with 'always' if you don't like them)
+disable_ligatures never
 #font_features JetBrainsMonoNLNF-Regular +zero +ss19
 #adjust_line_height 100%
 #adjust_baseline -1
