--- a/kitty/.config/kitty/macos-shortcuts.conf
+++ b/kitty/.config/kitty/macos-shortcuts.conf
@@ -46,7 +46,7 @@ map cmd+d launch --location=vsplit --cwd=current
 map cmd+shift+d launch --location=hsplit --cwd=current
 
 # Smart split based on current layout
-map cmd+enter launch --location=split --cwd=current
+# map cmd+enter launch --location=split --cwd=current (removed - conflicts with fullscreen)
 
 # Navigate between windows/panes
 map cmd+option+left neighboring_window left
@@ -93,8 +93,23 @@ map cmd+end scroll_end
 map option+up scroll_line_up
 map option+down scroll_line_down
 
-# Search
-map cmd+f show_scrollback
+# Search in scrollback (native Kitty search)
+map cmd+f launch --type=overlay --stdin-source=@screen_scrollback /usr/bin/less +G -R
+
+# Save scrollback to file
+map cmd+shift+s launch --type overlay --stdin-source=@screen_scrollback --stdin-add-formatting /bin/sh -c "cat > /tmp/kitty-scrollback-$(date +%Y%m%d-%H%M%S).txt && echo 'Scrollback saved to /tmp/'"
+
+# ============================================================================
+# WINDOW RESIZING
+# ============================================================================
+
+# Resize windows with Cmd+Shift+HJKL (vim-style)
+map cmd+shift+h resize_window narrower 2
+map cmd+shift+k resize_window taller 2
+map cmd+shift+j resize_window shorter 2
+
+# Reset window sizes
+map cmd+shift+0 resize_window reset
 
 # ============================================================================
 # SESSION MANAGEMENT
@@ -106,6 +121,9 @@ map cmd+k clear_terminal clear active
 # Reload config
 map cmd+shift+r load_config_file
 
+# Open URL hints (shows clickable URLs)
+map cmd+shift+u kitten hints
+
 # Toggle fullscreen
 map cmd+enter toggle_fullscreen
 
@@ -116,11 +134,11 @@ map cmd+enter toggle_fullscreen
 # Unicode input
 map cmd+ctrl+space kitten unicode_input
 
-# Open URL
-map cmd+shift+o open_url_with_hints
+# Open file paths in editor
+map cmd+shift+o kitten hints --type path
 
-# Insert emoji
-map cmd+shift+e kitten emoji
+# Unicode input (includes emoji)
+map cmd+shift+e kitten unicode_input
 
 # ============================================================================
 # LAYOUT MANAGEMENT
