periodic fixes and housekeeping

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1333,7 +1333,7 @@ inactive_tab_font_style normal
 
 #: The foreground and background colors.
 
-background_opacity 0.98
+#background_opacity 0.98
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -2271,6 +2271,9 @@ macos_traditional_fullscreen no
 
 # map kitty_mod+enter new_window
 # map cmd+enter       new_window
+
+# Allow Shift+Enter to send newline to shell
+map shift+enter send_text all \r
 
 #::  You can open a new kitty window running an arbitrary program, for
 #::  example::
